fixing layout problems

--- a/style/style.css
+++ b/style/style.css
@@ -182,7 +182,7 @@ form div input[type="submit"] {
 
 @media (max-width: 32rem) {
   body {
-    width: 45rem;
+    width: 32rem;
   }
   
   form .full-width {
